[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/menu/main/main.gd" type="Script" id=1]
[ext_resource path="res://gui/assets/font/OpenSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="main" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="container" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 116.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="btn_game_continue" type="Button" parent="container" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="btn_game_new" type="Button" parent="container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="btn_menu_load" type="Button" parent="container" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="btn_menu_settings" type="Button" parent="container" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="btn_menu_extras" type="Button" parent="container" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Extras"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="btn_menu_instructions2" type="Button" parent="container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 128.0
margin_bottom = 74.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Instructions"
flat = false
align = 1

[node name="space" type="TextureRect" parent="container" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 128.0
margin_bottom = 148.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="btn_action_quit" type="Button" parent="container" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 128.0
margin_bottom = 190.0
rect_min_size = Vector2( 128, 32 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[connection signal="pressed" from="container/btn_game_continue" to="." method="_on_btn_game_continue_pressed"]

[connection signal="pressed" from="container/btn_game_new" to="." method="_on_btn_game_new_pressed"]

[connection signal="pressed" from="container/btn_menu_load" to="." method="_on_btn_menu_load_pressed"]

[connection signal="pressed" from="container/btn_menu_settings" to="." method="_on_btn_menu_settings_pressed"]

[connection signal="pressed" from="container/btn_menu_extras" to="." method="_on_btn_menu_extras_pressed"]

[connection signal="pressed" from="container/btn_menu_instructions2" to="." method="_on_btn_menu_instructions2_pressed"]

[connection signal="pressed" from="container/btn_action_quit" to="." method="_on_btn_action_quit_pressed"]


